--- a/src/components/ships/ShipList.css
+++ b/src/components/ships/ShipList.css
@@ -1,4 +1,4 @@
-.ship-container {
+/* .ship-card {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -6,4 +6,4 @@
 
 .hauler-name {
   margin: 10px 50px;
-}
+} */
