--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,13 @@
-a {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* a {
   text-decoration: none;
-}
+} */
 
 /* This prevents all the links in the app from turning purple after visiting */
-a:visited {
+/* a:visited {
   color: inherit;
 }
 
@@ -14,4 +18,4 @@ ul {
 
 header {
   font-size: 30px;
-}
+} */
